jAudioTools internationalized. General Tools, Data Types, Features, and Aggregators remain.